fix stretched images

--- a/components/Image/Image.module.css
+++ b/components/Image/Image.module.css
@@ -2,4 +2,5 @@
   display: block;
   margin: 1em auto;
   max-width: 100%;
+  height: auto;
 }
